nieuwe website layout 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -649,7 +649,7 @@ img{
 
     .about_snow-2{
         right: 10rem;
-        bottom: 3.5re;
+        bottom: 3.5rem;
     }
 
     .send_container{
